# FluxNet

./: CMakeLists.txt  FluxNet.sln  README.md
FluxNet/: FluxNet.vcxproj
Include/FluxNet/: FluxNetDefines.h  FluxTypes.h
Include/FluxNet/NetEngine/: FluxChannel.h  FluxClient.h  FluxNetEngine.h  FluxNetEngineDefines.h  FluxNetMessages.h  FluxNetNotificationHandler.h  FluxPeer.h  FluxServer.h
Include/FluxNet/Network/: FluxNetModulePlatform.h  FluxNetTransporter.h  FluxNetUpdater.h
Include/FluxNet/Network/Win32/: FluxNetModule_Win32.h
Include/FluxNet/Serializer/: FluxReflection.h  FluxSerializable.h  FluxSerializableClass.h  FluxSerializer.h
Include/FluxNet/Serializer/Reflection/: FluxClass.h  FluxClassDescriptor.h  FluxClassFactory.h  FluxProperty.h  FluxReflectionDefines.h
Include/FluxNet/Serializer/Streams/: FluxBinarySerializableStream.h  FluxBinaryStream.h  FluxIStream.h
Include/FluxNet/Utils/: FluxAllocator.h  FluxBitSet.h  FluxCircularBuffer.h  FluxHash.h  FluxNetAllocator.h  FluxQueue.h
Sample/: ChatSample.cpp
Source/NetEngine/: FluxChannel.cpp  FluxClient.cpp  FluxNetEngine.cpp  FluxNetMessages.cpp  FluxPeer.cpp  FluxServer.cpp
Source/Network/Win32/: FluxNetModule_Win32.cpp
Source/Serializer/Reflection/: FluxClass.cpp  FluxClassDescriptor.cpp  FluxClassFactory.cpp
Source/Serializer/Streams/: FluxBinarySerializableStream.cpp  FluxBinaryStream.cpp
Source/Utils/: FluxAllocator.cpp  FluxNetTransporter.cpp
